fix double border on notepad

--- a/win7.css
+++ b/win7.css
@@ -287,6 +287,7 @@ hr {
 .windowmain textarea {
   flex-grow: 1;
   resize: none;
+  border: none;
 }
 
 .window_aboutwindows > .windowmain > div {
